--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     -->
     
-    <title>정신차려 각박한 서울에서 디자이너로 산다는 것...</title> 
+    <title>야 호</title> 
     <meta name="description" content=
-          "2012년 유명 에이전시 입사하고 그래픽 디자이너로 날개를 펼칠 줄 알았지 하지만 현실은 2014년부터 냉혹한 프리랜서의 길을 no정신으로 살다. 맨땅에 헤딩하며 얻은 생각이 많고, 디자인도 디자인이지만 협업의 기술을 쌓아왔다(이제 좀 자신있음). 나.. 그동안 많은 일이 있었어..."> 
+          "나의 웹사이트"> 
     <meta name="keywords" content="홈피, 그래픽 디자인, 서울 디자인 스튜디오, 디자이너, 활동가"> 
     <meta name="robots" content="index, follow"> 
-    <meta property="og:title" content="정신차려 각박한 서울에서 디자이너로 산다는 것...">
+    <meta property="og:title" content="야 호">
     <meta property="og:description" 
-          content="2012년 유명 에이전시 입사하고 그래픽 디자이너로 날개를 펼칠 줄 알았지 하지만 현실은 2014년부터 냉혹한 프리랜서의 길을 no정신으로 살다. 맨땅에 헤딩하며 얻은 생각이 많고, 디자인도 디자인이지만 협업의 기술을 쌓아왔다(이제 좀 자신있음). 나.. 그동안 많은 일이 있었어...">
+          content="나.. 그동안 많은 일이 있었어...">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://helloinah.github.io/hompy/"> 
     <meta property="og:image" content="ogimage.webp"> <meta property="og:image:alt" content="이나의 홈피">
@@ -35,13 +35,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=expand_content" />    
     <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.3.0/dist/dotlottie-wc.js" type="module"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K5N1G9ZS2F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-K5N1G9ZS2F');
-</script>
     </head>
 <body>
     <div class="loading-overlay" id="loading-overlay"></div>
